crates/tinymist-query/src/fixtures/playground/snaps/test.snap
---
source: crates/tinymist-query/src/hover.rs
expression: content
input_file: crates/tinymist-query/src/fixtures/playground/base.typ
---
Range: 5:20:5:26

```typc
let my-fun(
  note: any,
  mode: str = "typ",
  setting: (any) => any = Closure(..),
) = none;
```


======


```
failed to parse docs: error: unclosed delimiter
  ┌─ /dummy-root/__wrap_md_main.typ:2:0
  │
2 │ *
  │ ^


```

```typ
*
```

# Positional Parameters

## note

```typc
type: 
```



# Named Parameters

## mode

```typc
type: "typ"
```



## setting (named)

```typc
type: (any) => any
```
